# aichor-demo

./: a.txt  main.py  manifest.yaml
manifests/: manifest.jax.sample.yaml  manifest.kuberay.sample.yaml  manifest.pytorch.sample.yaml  manifest.tf.sample.yaml  manifest.xgboost.sample.yaml
manifests20/: manifest.jax.sample.yaml
ray-explo/: main.py  nn_pipeline.py  pyproject.toml
smoke-test/: main.py  nn_pipeline.py  pyproject.toml
smoke-test/manifests/: manifest.jax.sample.yaml
smoke-test/metrics_test/: __init__.py  load.py
