[project]
name = "aichor-smoke-test"
version = "0.1.0"
requires-python = ">=3.12"
# torch is provided by the base image (pytorch/pytorch:2.12.0-cuda12.6-cudnn9).
# These are the extras installed on top of it.
dependencies = [
    "mlflow-skinny==3.13.0",
    "matplotlib==3.10.9",
    "scikit-learn==1.9.0",
    "pandas==3.0.3",
    "boto3==1.43.24",
    "tensorboardX==2.6.5",
    "psutil==7.2.2",          # CPU/memory system metrics
    "nvidia-ml-py==13.610.43",  # GPU system metrics (pynvml)
]

[project.optional-dependencies]
# The rayproject/ray base image (build/ray.Dockerfile) ships ray + numpy but
# no torch, so it installs this extra. The pytorch base (build/Dockerfile)
# already bundles torch and installs the bare dependencies above instead.
torch = ["torch==2.5.1"]

# main.py / nn_pipeline.py are plain scripts, not an installable package.
[tool.uv]
package = false
