[project]
name = "aichor-smoke-test"
version = "0.1.0"
requires-python = ">=3.12"
# torch is provided by the base image (pytorch/pytorch:2.12.0-cuda12.6-cudnn9).
# These are the extras installed on top of it.
dependencies = [
    "mlflow-skinny==3.13.0",
    "matplotlib==3.10.9",
    "scikit-learn==1.9.0",
    "pandas==3.0.3",
    "boto3==1.43.24",
    "tensorboardX==2.6.5",
]

# main.py / nn_pipeline.py are plain scripts, not an installable package.
[tool.uv]
package = false
